@@ -13,13 +13,14 @@ CDVDInputStream* CDVDFactoryInputStream::CreateInputStream(IDVDPlayer* pPlayer, 
       file.compare("\\Device\\Cdrom0") == 0)
   {
     return (new CDVDInputStreamNavigator(pPlayer));
-  }
-  else if (item.IsShoutCast())
-    /* this should be replaced with standard file as soon as ffmpeg can handle raw aac */
-    /* currently ffmpeg isn't able to detect that */
-    return (new CDVDInputStreamHttp());
-  else if (item.IsInternetStream() )  
-    return (new CDVDInputStreamHttp());
+  }  
+  //else if (item.IsShoutCast())
+  //  /* this should be replaced with standard file as soon as ffmpeg can handle raw aac */
+  //  /* currently ffmpeg isn't able to detect that */
+  //  return (new CDVDInputStreamHttp());
+  //else if (item.IsInternetStream() )  
+  //  return (new CDVDInputStreamHttp());
   
+  // our file interface handles all these types of streams
   return (new CDVDInputStreamFile());
 }
